@@ -3,7 +3,7 @@ Type: Package
 Title: Big Data Management of Genome-Wide Sequencing Variants
 Version: 1.9.9
 Date: 2015-07-24
-Depends: gdsfmt (>= 1.5.8)
+Depends: gdsfmt (>= 1.5.9)
 Imports: methods, Biostrings, GenomicRanges, IRanges, S4Vectors,
         VariantAnnotation
 LinkingTo: gdsfmt
